--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,4 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgba(128, 128, 128, 0.24);
+  flex-flow: column;
+}
+
+h1 {
+  padding-bottom: 2rem;
 }
