--- a/src/Calculator.module.css
+++ b/src/Calculator.module.css
@@ -17,6 +17,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 1.3rem;
+  color: aliceblue;
+}
+
+.div1 {
+  justify-content: flex-end !important;
+  padding-right: 2rem;
 }
 
 .div1 {
