--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 .app {
+  font-family: 'Orbitron', sans-serif;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -9,4 +10,6 @@
 
 h1 {
   padding-bottom: 2rem;
+  font-weight: 400;
+  font-size: 2.3rem;
 }
