--- a/src/Calculator.module.css
+++ b/src/Calculator.module.css
@@ -22,14 +22,25 @@
 }
 
 .div1 {
-  justify-content: flex-end !important;
+  grid-area: 1 / 1 / 2 / 5;
+  align-items: flex-end !important;
   padding-right: 2rem;
+  letter-spacing: 1.5px;
+  display: flex;
+  flex-flow: column;
 }
 
-.div1 {
-  grid-area: 1 / 1 / 2 / 5;
+.memory {
+  height: 25px;
+  color: black;
 }
+
+.editor {
+  height: 25px;
+}
+
 .div2 {
+  background-color: rgba(0, 0, 0, 0.548) !important;
   grid-area: 2 / 1 / 3 / 3;
 }
 .div3 {
