--- a/src/Calculator.module.css
+++ b/src/Calculator.module.css
@@ -1,46 +1,65 @@
 .container {
-  width: 400px;
-  height: 500px;
   margin: 0 auto;
   background-color: rgb(255, 180, 81);
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: minmax(110px, auto) repeat(5, 100px);
   grid-column-gap: 5px;
   grid-row-gap: 5px;
   padding: 20px;
 }
 
-.container > div {
-  border: 1px black solid;
-  background-color: grey;
+.container > .numPad {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* width: 100px; */
+  /* height: 100px; */
+  border: 1px black solid;
+  background-color: grey;
   font-size: 1.3rem;
   color: aliceblue;
 }
 
-.div1 {
-  grid-area: 1 / 1 / 2 / 5;
-  align-items: flex-end !important;
-  padding-right: 2rem;
-  letter-spacing: 1.5px;
+.container > .numPad:hover {
+  background-color: rgb(85, 85, 85);
+}
+
+.display {
   display: flex;
   flex-flow: column;
+  justify-content: center;
+  background-color: grey;
+  word-wrap: break-word;
+  font-size: 1.3rem;
+  color: aliceblue;
+  border: 1px black solid;
+  padding-right: 2rem;
+  letter-spacing: 1.5px;
+  text-align: right;
+}
+
+.memory,
+.editor {
+  width: 100%;
 }
 
 .memory {
-  height: 25px;
   color: black;
 }
 
 .editor {
-  height: 25px;
+}
+
+.numPadAc {
+  background-color: rgba(0, 0, 0, 0.548) !important;
+}
+
+.div1 {
+  grid-area: 1 / 1 / 2 / 5;
 }
 
 .div2 {
-  background-color: rgba(0, 0, 0, 0.548) !important;
   grid-area: 2 / 1 / 3 / 3;
 }
 .div3 {
