--- a/src/Calculator.module.css
+++ b/src/Calculator.module.css
@@ -2,8 +2,8 @@
   margin: 0 auto;
   background-color: rgb(255, 180, 81);
   display: grid;
-  grid-template-columns: repeat(4, 100px);
-  grid-template-rows: minmax(110px, auto) repeat(5, 100px);
+  grid-template-columns: repeat(4, minmax(auto, 100px));
+  grid-template-rows: minmax(110px, auto) repeat(5, minmax(auto, 100px));
   grid-column-gap: 5px;
   grid-row-gap: 5px;
   padding: 20px;
@@ -47,9 +47,6 @@
   color: black;
 }
 
-.editor {
-}
-
 .numPadAc {
   background-color: rgba(0, 0, 0, 0.548) !important;
 }
@@ -58,58 +55,58 @@
   background-color: rgba(0, 0, 0, 0.726) !important;
 }
 
+/* CSS grid layout */
 .div1 {
   grid-area: 1 / 1 / 2 / 5;
 }
-
-.div2 {
+.layout_numpad_ac {
   grid-area: 2 / 1 / 3 / 3;
 }
-.div3 {
+.layout_numpad_divide {
   grid-area: 2 / 3 / 3 / 4;
 }
-.div4 {
+.layout_numpad_multiply {
   grid-area: 2 / 4 / 3 / 5;
 }
-.div5 {
+.layout_numpad_0 {
   grid-area: 6 / 1 / 7 / 3;
 }
-.div6 {
+.layout_numpad_equal {
   grid-area: 5 / 4 / 7 / 5;
 }
-.div13 {
-  grid-area: 3 / 1 / 4 / 2;
-}
-.div14 {
-  grid-area: 3 / 2 / 4 / 3;
-}
-.div15 {
-  grid-area: 3 / 3 / 4 / 4;
-}
-.div10 {
-  grid-area: 4 / 1 / 5 / 2;
-}
-.div11 {
-  grid-area: 4 / 2 / 5 / 3;
-}
-.div12 {
-  grid-area: 4 / 3 / 5 / 4;
-}
-.div7 {
+.layout_numpad_1 {
   grid-area: 5 / 1 / 6 / 2;
 }
-.div8 {
+.layout_numpad_2 {
   grid-area: 5 / 2 / 6 / 3;
 }
-.div9 {
+.layout_numpad_3 {
   grid-area: 5 / 3 / 6 / 4;
 }
-.div16 {
+.layout_numpad_4 {
+  grid-area: 4 / 1 / 5 / 2;
+}
+.layout_numpad_5 {
+  grid-area: 4 / 2 / 5 / 3;
+}
+.layout_numpad_6 {
+  grid-area: 4 / 3 / 5 / 4;
+}
+.layout_numpad_7 {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.layout_numpad_8 {
+  grid-area: 3 / 2 / 4 / 3;
+}
+.layout_numpad_9 {
+  grid-area: 3 / 3 / 4 / 4;
+}
+.layout_numpad_subtract {
   grid-area: 3 / 4 / 4 / 5;
 }
-.div17 {
+.layout_numpad_add {
   grid-area: 4 / 4 / 5 / 5;
 }
-.div18 {
+.layout_numpad_dot {
   grid-area: 6 / 3 / 7 / 4;
 }
